kubernetes/stateful/redis/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: stateful
  name: redis
spec:
  selector:
    app: redis
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
