kubernetes/stateful/redis/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: redis-gateway
  namespace: stateful
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 6379
        name: tcp-redis
        protocol: tcp
      hosts:
        - "*"
