kubernetes/stateful/redis/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: redis-virtual-service
  namespace: stateful
spec:
  hosts:
    - "*"
  gateways:
    - redis-gateway
  tcp:
    - match:
        - port: 6379
      route:
        - destination:
            host: redis
            port:
              number: 6379
